<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/text_navigation"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/drawerNavigationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_navigation_drawer"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/bottomNavigationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_navigation_bottom"
                android:textSize="16sp" />

        </RadioGroup>

    </LinearLayout>

</layout>
