<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fintech_school.currency_trader.exchange.exchange_screen.ExchangeViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="com.fintech_school.currency_trader.exchange.exchange_screen.ExchangeFragment">

        <TextView
            android:id="@+id/firstCurrencyName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@{viewModel.getBaseCurrency().getName()}"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/twoArrows"
            app:layout_constraintEnd_toEndOf="@+id/from"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/from"
            app:layout_constraintTop_toTopOf="@+id/twoArrows"
            app:layout_constraintVertical_bias="0.8"
            tools:text="USD" />

        <TextView
            android:id="@+id/secondCurrencyName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@{viewModel.getTargetCurrency().getName()}"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/twoArrows"
            app:layout_constraintEnd_toEndOf="@+id/to"
            app:layout_constraintStart_toStartOf="@+id/to"
            app:layout_constraintTop_toTopOf="@+id/twoArrows"
            app:layout_constraintVertical_bias="0.8"
            tools:text="EUR" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/arrow"
            app:layout_constraintEnd_toStartOf="@+id/arrow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/arrow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextFrom"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_from"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@{String.valueOf(viewModel.getBaseAmount().get())}"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="144dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="@+id/arrow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_to"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@{String.valueOf(viewModel.getTargetAmount().get())}"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="144dp" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/to"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/from"
            app:layout_constraintTop_toBottomOf="@+id/twoArrows"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_36dp" />

        <ImageView
            android:id="@+id/twoArrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toStartOf="@+id/secondCurrencyName"
            app:layout_constraintStart_toEndOf="@+id/firstCurrencyName"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_compare_arrows_black_36dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/button_exchange"
            android:textSize="18sp"
            android:background="@color/buttonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrow"
            app:layout_constraintVertical_bias="0.100000024" />

    </android.support.constraint.ConstraintLayout>

</layout>